--- a/Machine Learning/1_linear_reg/1_linear_regression.ipynb
+++ b/Machine Learning/1_linear_reg/1_linear_regression.ipynb
@@ -230,30 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\rdank\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "array([628715.75342466])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.predict([[3300]])"
+    "reg.predict(pd.DataFrame({\"area\":[3300]}))"
    ]
   },
   {
@@ -725,24 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\rdank\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "array([41288.69409442])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +734,7 @@
    "source": [
     "E_reg = linear_model.LinearRegression()\n",
     "E_reg.fit(E_data[[\"year\"]],E_data.per_capita)\n",
-    "E_reg.predict([[2020]])"
+    "E_reg.predict(pd.DataFrame({\"year\":[2020]}))"
    ]
   },
   {
