--- a/Machine Learning/14_Naive_Bayes_Classifier/14_Naive_Bayes_Classifier.ipynb
+++ b/Machine Learning/14_Naive_Bayes_Classifier/14_Naive_Bayes_Classifier.ipynb
@@ -1103,210 +1103,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "7326dc57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[7.95719603e-01, 2.04280397e-01],\n",
-       "       [9.64845965e-01, 3.51540347e-02],\n",
-       "       [2.25047230e-01, 7.74952770e-01],\n",
-       "       [9.62525571e-01, 3.74744294e-02],\n",
-       "       [2.03151247e-02, 9.79684875e-01],\n",
-       "       [3.68943011e-01, 6.31056989e-01],\n",
-       "       [2.24923372e-01, 7.75076628e-01],\n",
-       "       [9.58161687e-01, 4.18383129e-02],\n",
-       "       [2.55144585e-02, 9.74485541e-01],\n",
-       "       [2.11535836e-01, 7.88464164e-01],\n",
-       "       [2.06121033e-01, 7.93878967e-01],\n",
-       "       [3.66689053e-03, 9.96333109e-01],\n",
-       "       [9.39174612e-01, 6.08253876e-02],\n",
-       "       [9.24772689e-01, 7.52273108e-02],\n",
-       "       [2.03042035e-02, 9.79695797e-01],\n",
-       "       [3.08551358e-01, 6.91448642e-01],\n",
-       "       [9.58241094e-01, 4.17589061e-02],\n",
-       "       [9.18099598e-01, 8.19004019e-02],\n",
-       "       [1.53131764e-07, 9.99999847e-01],\n",
-       "       [8.96802285e-01, 1.03197715e-01],\n",
-       "       [9.54758503e-01, 4.52414973e-02],\n",
-       "       [9.57072357e-01, 4.29276431e-02],\n",
-       "       [2.54433452e-01, 7.45566548e-01],\n",
-       "       [9.37338077e-01, 6.26619225e-02],\n",
-       "       [9.65234851e-01, 3.47651491e-02],\n",
-       "       [9.22124860e-01, 7.78751403e-02],\n",
-       "       [9.68058639e-01, 3.19413607e-02],\n",
-       "       [3.74357562e-01, 6.25642438e-01],\n",
-       "       [3.38256727e-01, 6.61743273e-01],\n",
-       "       [3.38745329e-01, 6.61254671e-01],\n",
-       "       [6.40700851e-04, 9.99359299e-01],\n",
-       "       [3.27997940e-01, 6.72002060e-01],\n",
-       "       [7.58452300e-01, 2.41547700e-01],\n",
-       "       [7.84694802e-01, 2.15305198e-01],\n",
-       "       [1.89393896e-01, 8.10606104e-01],\n",
-       "       [9.65915053e-01, 3.40849469e-02],\n",
-       "       [9.65209482e-01, 3.47905177e-02],\n",
-       "       [2.86621774e-02, 9.71337823e-01],\n",
-       "       [3.74320844e-01, 6.25679156e-01],\n",
-       "       [9.31359822e-01, 6.86401777e-02],\n",
-       "       [9.22198301e-02, 9.07780170e-01],\n",
-       "       [3.74576534e-01, 6.25423466e-01],\n",
-       "       [3.33089303e-01, 6.66910697e-01],\n",
-       "       [7.95328372e-01, 2.04671628e-01],\n",
-       "       [7.75035907e-01, 2.24964093e-01],\n",
-       "       [1.58446791e-02, 9.84155321e-01],\n",
-       "       [3.32995398e-01, 6.67004602e-01],\n",
-       "       [7.84101998e-01, 2.15898002e-01],\n",
-       "       [8.82184062e-01, 1.17815938e-01],\n",
-       "       [3.84826507e-01, 6.15173493e-01],\n",
-       "       [9.62713560e-01, 3.72864401e-02],\n",
-       "       [2.29970081e-03, 9.97700299e-01],\n",
-       "       [9.64845965e-01, 3.51540347e-02],\n",
-       "       [1.91206599e-01, 8.08793401e-01],\n",
-       "       [2.31719045e-01, 7.68280955e-01],\n",
-       "       [9.21364021e-01, 7.86359790e-02],\n",
-       "       [3.54498859e-05, 9.99964550e-01],\n",
-       "       [9.60968120e-01, 3.90318803e-02],\n",
-       "       [9.68394879e-01, 3.16051210e-02],\n",
-       "       [2.96571007e-02, 9.70342899e-01],\n",
-       "       [1.19156244e-01, 8.80843756e-01],\n",
-       "       [9.64899234e-01, 3.51007655e-02],\n",
-       "       [4.49739765e-11, 1.00000000e+00],\n",
-       "       [9.56960888e-01, 4.30391119e-02],\n",
-       "       [9.64807866e-01, 3.51921344e-02],\n",
-       "       [2.03355677e-01, 7.96644323e-01],\n",
-       "       [1.97282218e-01, 8.02717782e-01],\n",
-       "       [9.64804313e-01, 3.51956869e-02],\n",
-       "       [9.54667771e-01, 4.53322290e-02],\n",
-       "       [9.64824822e-01, 3.51751776e-02],\n",
-       "       [5.06295293e-02, 9.49370471e-01],\n",
-       "       [9.62673139e-01, 3.73268605e-02],\n",
-       "       [2.94125886e-01, 7.05874114e-01],\n",
-       "       [7.64465195e-01, 2.35534805e-01],\n",
-       "       [9.20627667e-01, 7.93723329e-02],\n",
-       "       [9.51604966e-03, 9.90483950e-01],\n",
-       "       [9.50269079e-01, 4.97309207e-02],\n",
-       "       [1.36876675e-07, 9.99999863e-01],\n",
-       "       [9.64845965e-01, 3.51540347e-02],\n",
-       "       [9.61669698e-01, 3.83303024e-02],\n",
-       "       [9.64804313e-01, 3.51956869e-02],\n",
-       "       [3.47834134e-01, 6.52165866e-01],\n",
-       "       [9.58045058e-01, 4.19549416e-02],\n",
-       "       [3.04797542e-01, 6.95202458e-01],\n",
-       "       [3.77316629e-01, 6.22683371e-01],\n",
-       "       [9.64726927e-01, 3.52730726e-02],\n",
-       "       [9.25223579e-01, 7.47764211e-02],\n",
-       "       [2.22450056e-02, 9.77754994e-01],\n",
-       "       [9.14502770e-01, 8.54972305e-02],\n",
-       "       [9.45600138e-01, 5.43998617e-02],\n",
-       "       [9.59052444e-01, 4.09475557e-02],\n",
-       "       [2.22637021e-01, 7.77362979e-01],\n",
-       "       [9.67849043e-01, 3.21509574e-02],\n",
-       "       [8.29496172e-01, 1.70503828e-01],\n",
-       "       [9.17296956e-01, 8.27030442e-02],\n",
-       "       [9.00903667e-01, 9.90963328e-02],\n",
-       "       [9.54663243e-01, 4.53367570e-02],\n",
-       "       [9.29994767e-01, 7.00052334e-02],\n",
-       "       [7.99205016e-01, 2.00794984e-01],\n",
-       "       [2.25879794e-01, 7.74120206e-01],\n",
-       "       [9.68383886e-01, 3.16161141e-02],\n",
-       "       [9.61752947e-01, 3.82470535e-02],\n",
-       "       [9.52214189e-01, 4.77858109e-02],\n",
-       "       [3.67892591e-01, 6.32107409e-01],\n",
-       "       [7.04194736e-02, 9.29580526e-01],\n",
-       "       [9.06651679e-01, 9.33483211e-02],\n",
-       "       [9.12627368e-01, 8.73726325e-02],\n",
-       "       [3.84676724e-02, 9.61532328e-01],\n",
-       "       [3.78330644e-01, 6.21669356e-01],\n",
-       "       [9.64801346e-01, 3.51986539e-02],\n",
-       "       [7.96991579e-01, 2.03008421e-01],\n",
-       "       [9.64730142e-01, 3.52698580e-02],\n",
-       "       [9.58580354e-01, 4.14196465e-02],\n",
-       "       [9.64682776e-01, 3.53172237e-02],\n",
-       "       [9.39174612e-01, 6.08253876e-02],\n",
-       "       [4.59096982e-02, 9.54090302e-01],\n",
-       "       [3.74446409e-01, 6.25553591e-01],\n",
-       "       [9.63671958e-01, 3.63280424e-02],\n",
-       "       [7.75255821e-01, 2.24744179e-01],\n",
-       "       [3.63702693e-01, 6.36297307e-01],\n",
-       "       [5.30546420e-05, 9.99946945e-01],\n",
-       "       [7.77760319e-01, 2.22239681e-01],\n",
-       "       [9.63861092e-01, 3.61389084e-02],\n",
-       "       [9.65209482e-01, 3.47905177e-02],\n",
-       "       [9.24645829e-01, 7.53541705e-02],\n",
-       "       [7.69499248e-01, 2.30500752e-01],\n",
-       "       [1.83405374e-01, 8.16594626e-01],\n",
-       "       [3.43985457e-01, 6.56014543e-01],\n",
-       "       [9.64824822e-01, 3.51751776e-02],\n",
-       "       [4.03560030e-02, 9.59643997e-01],\n",
-       "       [7.92999239e-02, 9.20700076e-01],\n",
-       "       [2.07999097e-02, 9.79200090e-01],\n",
-       "       [3.80509921e-01, 6.19490079e-01],\n",
-       "       [2.42796709e-01, 7.57203291e-01],\n",
-       "       [9.68087684e-01, 3.19123157e-02],\n",
-       "       [1.74393727e-02, 9.82560627e-01],\n",
-       "       [9.64730142e-01, 3.52698580e-02],\n",
-       "       [3.40761817e-01, 6.59238183e-01],\n",
-       "       [9.64726927e-01, 3.52730726e-02],\n",
-       "       [1.42397121e-01, 8.57602879e-01],\n",
-       "       [9.57312470e-01, 4.26875304e-02],\n",
-       "       [7.63864507e-01, 2.36135493e-01],\n",
-       "       [9.67005353e-01, 3.29946468e-02],\n",
-       "       [3.74121243e-01, 6.25878757e-01],\n",
-       "       [4.85988939e-01, 5.14011061e-01],\n",
-       "       [9.66464037e-01, 3.35359625e-02],\n",
-       "       [1.21501608e-02, 9.87849839e-01],\n",
-       "       [2.53595898e-01, 7.46404102e-01],\n",
-       "       [1.18688399e-04, 9.99881312e-01],\n",
-       "       [2.90134048e-01, 7.09865952e-01],\n",
-       "       [9.22806823e-01, 7.71931770e-02],\n",
-       "       [9.24460333e-01, 7.55396668e-02],\n",
-       "       [9.67616529e-01, 3.23834708e-02],\n",
-       "       [2.21847839e-01, 7.78152161e-01],\n",
-       "       [9.61402992e-01, 3.85970078e-02],\n",
-       "       [9.32499449e-01, 6.75005505e-02],\n",
-       "       [9.31593252e-01, 6.84067481e-02],\n",
-       "       [9.73715055e-02, 9.02628494e-01],\n",
-       "       [3.00201043e-02, 9.69979896e-01],\n",
-       "       [3.14884615e-01, 6.85115385e-01],\n",
-       "       [9.64726927e-01, 3.52730726e-02],\n",
-       "       [9.23498125e-01, 7.65018751e-02],\n",
-       "       [9.55925020e-01, 4.40749797e-02],\n",
-       "       [3.77135168e-01, 6.22864832e-01],\n",
-       "       [9.64824822e-01, 3.51751776e-02],\n",
-       "       [9.17283186e-01, 8.27168141e-02],\n",
-       "       [5.87238509e-01, 4.12761491e-01],\n",
-       "       [9.60844856e-01, 3.91551438e-02],\n",
-       "       [9.63646923e-01, 3.63530766e-02],\n",
-       "       [7.66004105e-01, 2.33995895e-01],\n",
-       "       [9.09072551e-01, 9.09274489e-02],\n",
-       "       [9.39599187e-01, 6.04008133e-02],\n",
-       "       [3.16518931e-01, 6.83481069e-01],\n",
-       "       [9.13760333e-02, 9.08623967e-01],\n",
-       "       [9.64222313e-01, 3.57776872e-02],\n",
-       "       [1.91639979e-03, 9.98083600e-01],\n",
-       "       [9.56434107e-01, 4.35658928e-02],\n",
-       "       [2.24630473e-01, 7.75369527e-01],\n",
-       "       [6.11100742e-37, 1.00000000e+00]])"
+       "array([[0.96484597, 0.03515403],\n",
+       "       [0.22504723, 0.77495277],\n",
+       "       [0.96252557, 0.03747443],\n",
+       "       [0.02031512, 0.97968488],\n",
+       "       [0.36894301, 0.63105699],\n",
+       "       [0.22492337, 0.77507663],\n",
+       "       [0.95816169, 0.04183831],\n",
+       "       [0.02551446, 0.97448554],\n",
+       "       [0.21153584, 0.78846416]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict_proba(X_test)"
+    "model.predict_proba(X_test)[1:10]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fdd7068",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
