WoE and IV notebook

--- a/Credit Risk/WOE&IV.ipynb
+++ b/Credit Risk/WOE&IV.ipynb
@@ -140,7 +140,7 @@
    "id": "d6b59ebb",
    "metadata": {},
    "source": [
-    "The ratio from WoE, tells direction of risk, but the log transforms it into a symmetric, additive scale that aligns with log-odds in logistic regression, which is why WoE uses the natural logarithm. in fact any monotonic transform function could work here, but regulators expect ln in based WoE."
+    "The ratio from WoE, tells direction of risk, but the log transforms it into a symmetric, additive scale that aligns with log-odds in logistic regression, which is why WoE uses the natural logarithm. In fact any monotonic transform function could work here, but regulators expect ln in based WoE."
    ]
   },
   {
