Add WoE and IV notebook

--- a/Credit Risk/WOE&IV.ipynb
+++ b/Credit Risk/WOE&IV.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "eb1224fe",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "4b3bcf7a",
    "metadata": {},
    "outputs": [
@@ -108,6 +108,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Create ratios symmetric around 1\n",
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "a9fb8941",
    "metadata": {},
    "outputs": [],
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "f09d148f",
    "metadata": {},
    "outputs": [
@@ -235,7 +236,7 @@
        "4      0  520  2.93     4"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,38 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "30d648c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['admit', 'gre', 'gpa', 'rank'], dtype='str')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cols = mydata.columns\n",
-    "print(cols)\n",
-    "cols[~cols.isin([\"admit\"])]\n",
-    "mydata[\"admit\"].dtype.kind in \"bifc\" and (len(np.unique(data[ivars]))>10):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "ef8b5666",
    "metadata": {},
    "outputs": [
@@ -374,12 +344,13 @@
        " 3         0.201465  0.757142  0.080997  )"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## A function to compute WoE and IV for numeric variables with more than 10 unique levels\n",
     "def iv_woe(data, target, bins =10, show_woe = False):\n",
     "\n",
     "    ## Empty DataFrame\n",
@@ -389,7 +360,7 @@
     "    cols = data.columns\n",
     "\n",
     "    for ivars in cols[~cols.isin([target])]:\n",
-    "        if (data[ivars].dtype.kind in \"bifc\") and (len(np.unique(data[ivars]))>10):\n",
+    "        if (data[ivars].dtype.kind in \"bifc\") and (len(np.unique(data[ivars]))>bins):  # condition checks whether a variable is numeric and has enough unique values.\n",
     "            binned_x = pd.qcut(data[ivars],bins,duplicates=\"drop\")\n",
     "            d0 = pd.DataFrame({'x': binned_x, 'y': data[target]})\n",
     "        else:\n",
