Machine learning Tutorial Files

--- a/Machine Learning/1_linear_reg/1_linear_regression.ipynb
+++ b/Machine Learning/1_linear_reg/1_linear_regression.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Problem Statement**: Given above data build a machine learning model that can predict home prices based on square feet area\n"
+    "**Problem Statement**: Given above data build a machine learning model that can predict home prices based on square feet area.\n"
    ]
   },
   {
