--- a/Machine Learning/1_linear_reg/1_linear_regression.ipynb
+++ b/Machine Learning/1_linear_reg/1_linear_regression.ipynb
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn import linear_model"
+    "from sklearn import linear_model\n"
    ]
   },
   {
